test/should-fail/vsgc4189.f3
/**
 * Regress test for VSGC-4189.
 *
 *  Compiled-bind optimization: do not generate unnecessary forward/self reference flags
 *
 * @compilearg -XDfwdRefOpt=objlit
 * @test/warning
 */

function f1() {
   var x:Object = Object{ function f2() { x; y; } };
   var y = 1;
}
